--- a/front-end/public/page.css
+++ b/front-end/public/page.css
@@ -1,58 +1,116 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+*:before,
+*:after{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
 }
 
-body {
-    background: linear-gradient(to right, #147921f7, #13721e);
-    font-family: 'Roboto';
+main{
+background-color: rgba(185, 161, 57, 0.13);
 }
 
-.section {
-    background-color: #e9e9e7;
-    box-shadow: 5px 5px 50px 8px rgb(0 0 0 / 59%);
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 750px;
-    margin-top: 100px;
-    padding: 25px;
-    border-radius: 5px;
-    font-size: 14px;
+.background{
+width: 430px;
+height: 520px;
+position: absolute;
+transform: translate(-50%,-50%);
+left: 50%;
+top: 50%;
 }
 
-.section h2 {
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+.background .circulo{
+height: 200px;
+width: 200px;
+position: absolute;
+border-radius: 50%;
 }
 
-form, label, input, .listar{
-    display: block;
+.circulo:first-child{
+background: linear-gradient(
+  rgb(192, 158, 77),
+  rgb(231, 194, 110)
+);
+left: -100px;
+top: -100px;
 }
 
-.listar{
-    margin-top: 10px;
+.circulo:last-child{
+background: linear-gradient(
+  to right,
+  #b75a27,
+  #e1814d
+);
+right: -100px;
+bottom: -100px;
 }
 
-input, .listar{
-    width: 100%;
-    margin-bottom: 2%;
-    padding: 2px;
+form{
+height: 650px;
+width: 450px;
+background-color: rgba(183, 154, 25, 0.13);
+position: absolute;
+transform: translate(-50%,-50%);
+top: 50%;
+left: 50%;
+border-radius: 15px;
+backdrop-filter: blur(10px);
+border: 2px solid rgba(183, 154, 25, 0.13);
+box-shadow: 0 0 40px rgba(8, 7, 16, 0.459);
+padding: 20px 25px;
 }
 
-#button, .listar{
-    padding: 5px;
-    background-color: white;
-    border-radius: 5px;
-    border-bottom: 2px solid zinc;
-    margin: 0;
+form *{
+font-family: 'Poppins',sans-serif;
+color: #000000a3;
+letter-spacing: 0.5px;
+outline: none;
+border: none;
 }
 
-a{
-    text-decoration: none;
-    color: black;
+form h3{
+font-size: 35px;
+font-weight: 900;
+text-align: center;
+}
+
+label{
+display: block;
+margin-top: 15px;
+font-size: 16px;
+font-weight: 500;
+}
+
+input{
+display: block;
+height: 45px;
+width: 100%;
+background-color: rgba(183, 154, 25, 0);
+border-radius: 3px;
+border-bottom: #62381297 dashed 1px;
+padding: 0 10px;
+margin-top: 5px;
+font-size: 14px;
+font-weight: 300;
+}
+
+::placeholder{
+color: #62371271;
+}
+
+button{
+margin-top: 40px;
+width: 100%;
+background-color: #ffdbbc00;
+color: #4b2606cb;
+padding: 15px 0;
+font-size: 18px;
+font-weight: 600;
+border: #62371282 solid 2px;
+border-radius: 10px;
+cursor: pointer;
+}
+
+button:hover{
+    background-color: #94643a43;
 }
