--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -1,12 +1,3 @@
-
-*,
-*:before,
-*:after{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 .body{
   background-color: rgba(185, 161, 57, 0.13);
 }
@@ -82,7 +73,7 @@
   font-weight: 600;
   }
   
-a{
+.link{
   text-decoration: none;
 }
 
@@ -106,7 +97,7 @@ a{
   font-weight: 300;
 }
 
-::placeholder{
+.link ::placeholder{
   color: #62371271;
 }
 
@@ -137,34 +128,21 @@ a{
   padding: 17px;
 }
 
-ul {
+.ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-a{
+.link{
   text-decoration: none;
   color: rgb(0, 0, 0);
   font-family: 'Quicksand', sans-serif;
   font-size: 900;
 }
 
-a:hover{
+.link:hover{
   color: rgb(184, 110, 26);
-}
-
-li img{
-  padding-right: 10px;
-}
-
-ul li {
-  display: inline;
-  padding-left: 10px;
-}
-
-li {
-  display: inline;
 }
 
 .main{
