--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -1,6 +1,4 @@
-.body{
-  background-color: rgba(185, 161, 57, 0.13);
-}
+  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 .background{
   width: 430px;
@@ -23,8 +21,8 @@
     rgb(192, 158, 77),
     rgb(231, 194, 110)
 );
-  left: -100px;
-  top: -100px;
+  left: -150px;
+  top: -150px;
 }
 
 .circulo:last-child{
@@ -33,8 +31,8 @@
     #b75a27,
     #e1814d
 );
-  right: -100px;
-  bottom: -100px;
+  right: -150px;
+  bottom: -150px;
 }
 
 .form{
@@ -49,7 +47,7 @@
   backdrop-filter: blur(10px);
   border: 2px solid rgba(183, 154, 25, 0.13);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.459);
-  padding: 20px 25px;
+  padding: 30px 30px;
 }
 
 .form *{
@@ -64,23 +62,21 @@
   font-size: 35px;
   font-weight: 900;
   text-align: left;
+  padding-bottom: 20px;
 }
 
-.voltar{
-  margin: -40px 365px 35px;
+.a{
+  margin: -30px 210px -30px;
   width: 70px;
   font-size: 18px;
   font-weight: 600;
-  }
-  
-.link{
   text-decoration: none;
 }
 
 .label{
   display: block;
-  margin-top: 15px;
-  font-size: 16px;
+  margin-top: 20px;
+  font-size: 18px;
   font-weight: 500;
 }
 
@@ -91,9 +87,9 @@
   background-color: rgba(183, 154, 25, 0);
   border-radius: 3px;
   border-bottom: #62381297 dashed 1px;
-  padding: 0 10px;
+  padding: 10 10px;
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
 }
 
@@ -102,7 +98,7 @@
 }
 
 .botao{
-  margin-top: 40px;
+  margin-top: 50px;
   width: 100%;
   background-color: #ffdbbc00;
   color: #4b2606cb;
@@ -123,41 +119,36 @@
 .menu{
   background-color: #fff;
   width: 100%;
-  height: 60px;
-  text-align: left;
-  padding: 17px;
-}
-
-.ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+  height: 50px;
+  text-align: center;
+  padding-top: 25px;
+  padding-left: 65px;
 }
 
 .link{
   text-decoration: none;
   color: rgb(0, 0, 0);
   font-family: 'Quicksand', sans-serif;
-  font-size: 900;
+  font-size: 19px;
+  font-weight: 600;
+  margin-left: -180px;
+  padding-top: 10px;
 }
 
 .link:hover{
   color: rgb(184, 110, 26);
 }
 
-.main{
-  display: flex; 
-  justify-content: center;
-  border: #62381297 dashed 1px;
-  padding: 10px;
-  margin: 0;
-}
+
 
 .group{
   display: grid;
-  grid-template-columns: 500px 600px 400px 400px;
-  padding: 10px; 
+  grid-template-columns: 100px 200px 10px0 0;
+  padding-left: 130px; 
+  padding-top: 30px;
+  padding-bottom: 50px;
   text-align: center;
+  border: #62381297 dashed 1px;
 }
 
 .card{
@@ -165,4 +156,65 @@
   border-radius: 12px;
   filter: drop-shadow(0 30px 10px rgba(0,0,0,0.125));
   font-family: 'Quicksand', sans-serif;
+}
+
+.texto{
+  font-weight: 400;
+  font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
+  margin-left: -180px;
+  padding-top: 10px;
+}
+
+.main{
+  background-color: rgba(185, 161, 57, 0.13);
+  display: grid;
+  grid-template-columns:auto auto auto ;
+}
+
+.menu2{
+  background-color: #fff;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding-top: 25px;
+  padding-left: 40px;
+}
+
+.group2{
+  padding-left: 130px; 
+  padding-top: 30px;
+  padding-bottom: 50px;
+  text-align: center;
+  border: #62381297 dashed 2px;
+}
+
+.botao2{
+  margin-top: 40px;
+  width: 20%;
+  background-color: #ffdbbc00;
+  color: #4b2606cb;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border: #62371282 solid 2px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-left: -180px;
+}
+
+.link2{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-family: 'Quicksand', sans-serif;
+  font-size: 19px;
+  font-weight: 600;
+  margin-left: -180px;
+  padding-top: 10px;
+  margin-right: -30px;
+}
+
+.imagem{
+  margin-right: 170px;
+  border: #62371282 solid 2px;
 }
