--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -1,8 +1,9 @@
-  @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
+/*cadastro*/
 .background{
   width: 430px;
-  height: 520px;
+  height: 410px;
   position: absolute;
   transform: translate(-50%,-50%);
   left: 50%;
@@ -36,7 +37,7 @@
 }
 
 .form{
-  height: 650px;
+  height: 600px;
   width: 450px;
   background-color: rgba(183, 154, 25, 0.13);
   position: absolute;
@@ -51,7 +52,7 @@
 }
 
 .form *{
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Quicksand', sans-serif;
   color: #000000a3;
   letter-spacing: 0.5px;
   outline: none;
@@ -66,35 +67,34 @@
 }
 
 .a{
-  margin: -30px 210px -30px;
+  margin-left: 240px;
   width: 70px;
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
 }
 
+.a:hover{
+  color: #87360b;
+}
+
 .label{
   display: block;
-  margin-top: 20px;
-  font-size: 18px;
+  padding-top: 23px;
+  font-size: 16px;
   font-weight: 500;
 }
 
 .input{
   display: block;
-  height: 45px;
+  height: 35px;
   width: 100%;
   background-color: rgba(183, 154, 25, 0);
-  border-radius: 3px;
   border-bottom: #62381297 dashed 1px;
-  padding: 10 10px;
-  margin-top: 5px;
+  padding-top: 5px;
+  padding-left: 10px;
   font-size: 16px;
   font-weight: 300;
-}
-
-.link ::placeholder{
-  color: #62371271;
 }
 
 .botao{
@@ -104,7 +104,7 @@
   color: #4b2606cb;
   padding: 15px 0;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 900;
   border: #62371282 solid 2px;
   border-radius: 10px;
   cursor: pointer;
@@ -116,13 +116,19 @@
 
 
 
+/*home*/
+.main{
+  background-color: rgba(185, 161, 57, 0.13);
+  display: grid;
+  grid-template-columns:auto auto auto ;
+}
+
 .menu{
   background-color: #fff;
-  width: 100%;
   height: 50px;
   text-align: center;
   padding-top: 25px;
-  padding-left: 65px;
+  padding-left: 130px;
 }
 
 .link{
@@ -131,15 +137,13 @@
   font-family: 'Quicksand', sans-serif;
   font-size: 19px;
   font-weight: 600;
-  margin-left: -195px;
+  margin-left: -150px;
   padding-top: 10px;
 }
 
 .link:hover{
   color: rgb(184, 110, 26);
 }
-
-
 
 .group{
   display: grid;
@@ -154,7 +158,6 @@
 .card{
   padding: 40px;
   border-radius: 12px;
-  filter: drop-shadow(0 30px 10px rgba(0,0,0,0.125));
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -162,35 +165,43 @@
   font-weight: 400;
   font-size: 18px;
   font-family: 'Quicksand', sans-serif;
-  margin-left: -195px;
+  margin-left: -150px;
   padding-top: 10px;
 }
 
-.main{
-  background-color: rgba(185, 161, 57, 0.13);
-  display: grid;
-  grid-template-columns:auto auto auto ;
-}
 
+
+/*ver mais*/
 .menu2{
   background-color: #fff;
-  width: 100%;
   height: 50px;
   text-align: center;
   padding-top: 25px;
-  padding-left: 40px;
+  padding-left: 90px;
+  border-bottom: #62381297 dashed 2px;
 }
 
 .group2{
   padding-left: 130px; 
-  padding-top: 30px;
-  padding-bottom: 50px;
+  padding-top: 10px;
   text-align: center;
-  border: #62381297 dashed 2px;
+}
+
+.card2{
+  padding: 40px;
+  border-radius: 12px;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.texto2{
+  font-weight: 400;
+  font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
+  margin-left: -125px;
+  padding-top: 10px;
 }
 
 .botao2{
-  margin-top: 40px;
   width: 20%;
   background-color: #ffdbbc00;
   color: #4b2606cb;
@@ -200,7 +211,12 @@
   border: #62371282 solid 2px;
   border-radius: 10px;
   cursor: pointer;
-  margin-left: -180px;
+  margin-left: -125px;
+  margin-top: 20px;
+}
+
+.botao2:hover{
+  background-color: #e0ad8043;
 }
 
 .link2{
@@ -215,6 +231,6 @@
 }
 
 .imagem{
-  margin-right: 170px;
+  margin-right: 130px;
   border: #62371282 solid 2px;
-}
+  box-shadow: -4px 6px 15px -3px rgba(0,0,0,0.83);}
