--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -38,7 +38,7 @@
 
 .form{
   height: 600px;
-  width: 450px;
+  width: 410px;
   background-color: rgba(183, 154, 25, 0.13);
   position: absolute;
   transform: translate(-50%,-50%);
@@ -48,7 +48,10 @@
   backdrop-filter: blur(10px);
   border: 2px solid rgba(183, 154, 25, 0.13);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.459);
-  padding: 30px 30px;
+  padding-top: 25px;
+  padding-left: 20px;
+  padding-right: 30px;
+  padding-bottom: 25px;
 }
 
 .form *{
@@ -67,7 +70,7 @@
 }
 
 .a{
-  margin-left: 240px;
+  margin-left: 200px;
   width: 70px;
   font-size: 18px;
   font-weight: 600;
